# pkg/api/topic/transport/schema.go
@@ -1,10 +1,10 @@
 package transport
 
 import (
-	"encoding/json"
-	"fmt"
+	"log"
 	"reflect"
-	"strings"
+
+	"github.com/nguyencatpham/go-effective-study/pkg/utl/helper"
 
 	dynamicGraphql "github.com/eneoti/dynamic-struct-graphql"
 	merp "github.com/eneoti/merge-struct"
@@ -14,84 +14,158 @@ import (
 	"github.com/nguyencatpham/go-effective-study/pkg/utl/model"
 )
 
-// List get list by graphql
-func List(c echo.Context, svc topic.Service, page *model.PaginationReq) graphql.Schema {
-	objectType := dynamicGraphql.DynamicGraphql("ListResponse", reflect.TypeOf(listResponse{}))
-	resolver := func(p graphql.ResolveParams) (interface{}, error) {
-		var queryArr []string
-		var tsQueryArr []string
+// object type
+var listType = dynamicGraphql.DynamicGraphql("ListResponse", reflect.TypeOf(listResponse{}))
+var itemType = dynamicGraphql.DynamicGraphql("ItemResponse", reflect.TypeOf(model.Topic{}))
+var updateType = dynamicGraphql.DynamicGraphql("UpdateResponse", reflect.TypeOf(updateReq{}))
 
-		//-
+// Query query data by graphql
+func Query(c echo.Context, svc topic.Service, page *model.PaginationReq) graphql.Schema {
+	var viewResolver = func(p graphql.ResolveParams) (interface{}, error) {
 		key := p.Args["key"]
-		//-- key not empty
-		if key != nil && strings.TrimSpace(key.(string)) != "" {
-			tmpStr := key.(string)
-			tsQueryArr = append(tsQueryArr, `' '`)
-			tsQueryArr = append(tsQueryArr, "topic.name")
-			tsQueryArr = append(tsQueryArr, "topic.title")
-			keyStr := `%s:*`
-			//--
-			f := func(c rune) bool {
-				return c == ' '
-			}
-			temps := strings.FieldsFunc(tmpStr, f)
-			if len(temps) > 0 {
-				keyStr = strings.Join(temps, ` & `)
-			}
-			tempStr := fmt.Sprintf(`to_tsvector('english', f_concat_ws(%s))
-				@@ to_tsquery('english', '%s')`,
-				strings.Join(tsQueryArr, ", "), keyStr)
-
-			queryArr = append(queryArr, tempStr)
-
-		}
-
-		name := p.Args["name"]
-		if name != nil {
-			tempStr := fmt.Sprintf(`topic.name = '%s'`, name.(string))
-			queryArr = append(queryArr, tempStr)
-		}
-		// if queryArr == nil || len(queryArr) == 0 {
-		// 	return nil, helper.HandleError("web:topic:list:invalidParams")
-		// }
-		result, totalItems, err := svc.List(c, page.Transform(), queryArr)
-		resultOutput := listResponse{result, page.Page, totalItems}
-
+		result, err := svc.View(c, helper.GetParams(key))
 		if err != nil {
 			return nil, err
 		}
-		var mapValue interface{}
+		conv := merp.ConventionalMarshaller{Value: &result}
+
+		return helper.MapResponse(conv)
+	}
+	var listResolver = func(p graphql.ResolveParams) (interface{}, error) {
+		key := p.Args["key"]
+		result, totalItems, err := svc.List(c, page.Transform(), helper.GetParams(key))
+		if err != nil {
+			return nil, err
+		}
+		resultOutput := listResponse{result, page.Page, totalItems}
 		conv := merp.ConventionalMarshaller{Value: resultOutput}
 
-		b, err := conv.MarshalJSON()
-		if err != nil {
-			return nil, err
-		}
-		err = json.Unmarshal(b, &mapValue)
-		if err != nil {
-			return nil, err
-		}
-		return mapValue, nil
+		return helper.MapResponse(conv)
 	}
 	var queryType = graphql.NewObject(
 		graphql.ObjectConfig{
 			Name: "Query",
 			Fields: graphql.Fields{
 				"result": &graphql.Field{
-					Type: objectType,
+					Type: itemType,
 					Args: graphql.FieldConfigArgument{
 						"key": &graphql.ArgumentConfig{
 							Type: graphql.String,
 						},
 					},
-					Resolve: resolver,
+					Resolve: viewResolver,
+				},
+				"list": &graphql.Field{
+					Type: listType,
+					Args: graphql.FieldConfigArgument{
+						"key": &graphql.ArgumentConfig{
+							Type: graphql.String,
+						},
+					},
+					Resolve: listResolver,
 				},
 			},
 		})
-	var schema, _ = graphql.NewSchema(
-		graphql.SchemaConfig{
-			Query: queryType,
-		},
-	)
-	return schema
+	log.Println("queryType", queryType)
+	log.Println("helper.NewSchema(queryType, mutationType)", helper.NewSchema(queryType, nil))
+	return helper.NewSchema(queryType, nil)
+}
+
+// Mutation data
+func Mutation(c echo.Context, svc topic.Service, req *model.UpdateReq) graphql.Schema {
+	log.Println("............Mutation.......", req)
+
+	var createResolver = func(p graphql.ResolveParams) (interface{}, error) {
+		item := model.Topic{
+			Name:        req.Name,
+			Description: req.Description,
+			Type:        model.TopicType(req.Type),
+		}
+		result, err := svc.Create(c, item)
+		log.Println("...................", result)
+		if err != nil {
+			return nil, err
+		}
+		conv := merp.ConventionalMarshaller{Value: &result}
+
+		return helper.MapResponse(conv)
+	}
+	var updateResolver = func(p graphql.ResolveParams) (interface{}, error) {
+		item := model.UpdateReq{
+			ID:          req.ID,
+			Name:        req.Name,
+			Description: req.Description,
+			Type:        req.Type,
+		}
+		result, err := svc.Update(c, item)
+		if err != nil {
+			return nil, err
+		}
+		conv := merp.ConventionalMarshaller{Value: &result}
+
+		return helper.MapResponse(conv)
+	}
+	var deleteResolver = func(p graphql.ResolveParams) (interface{}, error) {
+		id := req.ID
+		if id == 0 {
+			return nil, helper.HandleError("mising param id")
+		}
+		err := svc.Delete(c, id)
+		if err != nil {
+			return nil, err
+		}
+		conv := merp.ConventionalMarshaller{Value: nil}
+
+		return helper.MapResponse(conv)
+	}
+	var mutationType = graphql.NewObject(
+		graphql.ObjectConfig{
+			Name: "Mutation",
+			Fields: graphql.Fields{
+				"create": &graphql.Field{
+					Type: itemType,
+					Args: graphql.FieldConfigArgument{
+						"name": &graphql.ArgumentConfig{
+							Type: graphql.String,
+						},
+						"description": &graphql.ArgumentConfig{
+							Type: graphql.String,
+						},
+						"type": &graphql.ArgumentConfig{
+							Type: graphql.Int,
+						},
+					},
+					Resolve: createResolver,
+				},
+				"update": &graphql.Field{
+					Type: itemType,
+					Args: graphql.FieldConfigArgument{
+						"id": &graphql.ArgumentConfig{
+							Type: graphql.NewNonNull(graphql.Int),
+						},
+						"name": &graphql.ArgumentConfig{
+							Type: graphql.String,
+						},
+						"description": &graphql.ArgumentConfig{
+							Type: graphql.String,
+						},
+						"type": &graphql.ArgumentConfig{
+							Type: graphql.Int,
+						},
+					},
+					Resolve: updateResolver,
+				},
+				"delete": &graphql.Field{
+					Type: itemType,
+					Args: graphql.FieldConfigArgument{
+						"id": &graphql.ArgumentConfig{
+							Type: graphql.NewNonNull(graphql.Int),
+						},
+					},
+					Resolve: deleteResolver,
+				},
+			},
+		})
+
+	return helper.NewSchema(mutationType, mutationType)
 }
